@@ -1,11 +1,12 @@
 Package: survHE
 Title: Survival Analysis in Health Economic Evaluation
-Version: 1.1.3
-Date: 2021-06-25
+Version: 1.1.4
+Date: 2021-09-24
 Authors@R:c(
     person(given = "Gianluca",family = "Baio",role = c("aut", "cre"),email = "g.baio@ucl.ac.uk"),
     person("Andrea","Berardi",role="ctb",email="and.be.like@gmail.com"),
-    person("Philip","Cooney",role="ctb",email="philip.cooney@hotmail.com"))
+    person("Philip","Cooney",role="ctb",email="philip.cooney@hotmail.com"),
+    person("Andrew","Jones",role="ctb",email="andrew.r.johnson@postgrad.curtin.edu.au"))
 URL: https://github.com/giabaio/survHE, http://www.statistica.it/gianluca/
 BugReports: https://github.com/giabaio/survHE/issues
 Description: Contains a suite of functions for survival analysis in health economics.
@@ -19,7 +20,7 @@ License: GPL (>=3)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Biarch: true
 Depends: 
     methods,
@@ -33,7 +34,7 @@ Imports:
     tools,
     tibble,
     Rcpp (>= 0.12.0),
-    RcppParallel (>= 5.0.1),
+    RcppParallel (>= 5.0.2),
     rstan (>= 2.18.1),
     rstantools (>= 2.1.1)
 LinkingTo: 
