@@ -3,18 +3,18 @@
 functions {
   // Defines the log hazard
   vector log_h (vector t, real shape, vector scale) {
-    vector[num_elements(t)] log_h;
-    log_h = log(shape)+(shape-1)*log(t ./ scale)-log(scale);
-    return log_h;
+    vector[num_elements(t)] log_hvec;
+    log_hvec = log(shape)+(shape-1)*log(t ./ scale)-log(scale);
+    return log_hvec;
   }
   
   // Defines the log survival
   vector log_S (vector t, real shape, vector scale) {
-    vector[num_elements(t)] log_S;
+    vector[num_elements(t)] log_Svec;
     for (i in 1:num_elements(t)) {
-      log_S[i] = -pow((t[i]/scale[i]),shape);
+      log_Svec[i] = -pow((t[i]/scale[i]),shape);
     }
-    return log_S;
+    return log_Svec;
   }
   
   // Defines the sampling distribution
